--- a/ultralytics/cfg/models/v8/Yolo2_rtdetr.yaml
+++ b/ultralytics/cfg/models/v8/Yolo2_rtdetr.yaml
@@ -51,6 +51,6 @@ head:
   - [[-1, 19], 1, Concat, [1]]    # 30: Concatenate with EMA3
   - [-1, 1, C3k2, [1024, True]]    # 31: C2f
 
-  - [[25, 28, 31], 1, Detect, [nc]]  # 32: Detect(P3, P4, P5)
-  # - [[25, 28, 31], 1, RTDETRDecoder, [nc]]  # 32: Detect(P3, P4, P5)
+  # - [[25, 28, 31], 1, Detect, [nc]]  # 32: Detect(P3, P4, P5)
+  - [[25, 28, 31], 1, RTDETRDecoder, [nc]]  # 32: Detect(P3, P4, P5)
   
