--- a/ultralytics/cfg/models/v8/dual_conv_ema_fpn_rtdetr.yaml
+++ b/ultralytics/cfg/models/v8/dual_conv_ema_fpn_rtdetr.yaml
@@ -68,7 +68,7 @@ backbone:
   - [-1, 1, Index, [192, 4]]  # extracts 4th output (1, 192, 80, 80) - 2
   - [1, 1, Index, [384, 6]]  # extracts 6th output (1, 384, 40, 40) - 3
   - [1, 1, Index, [768, 8]]  # extracts 8th output (1, 768, 20, 20) - 4
-  - [-1, 1, SPPF, [512, 512, 3]]  # 5: Reduced channels from 768 to 512
+  - [-1, 1, SPPF, [512, 3]]  # 5: Fixed to [c2, k], reduced channels from 768 to 512
 
   # Swin Transformer - Pre-trained and frozen
   - [0, 1, TorchVision, [768, "swin_v2_t", "DEFAULT", True, 4, True, True]]  # 6
@@ -78,7 +78,7 @@ backbone:
   - [-1, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]]  # 10 (multiscale 2)
   - [6, 1, Index, [768, 9]]  # 11
   - [-1, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]]  # 12 (multiscale 3)
-  - [-1, 1, SPPF, [512, 512, 3]]  # 13: Reduced channels from 768 to 512
+  - [-1, 1, SPPF, [512, 3]]  # 13: Fixed to [c2, k], reduced channels from 768 to 512
 
   # Concat features along channel dimension
   - [[2, 8], 1, Concat, [1]]  # 14 concat scale 1 (192 + 192 = 384 channels)
@@ -106,4 +106,4 @@ head:
   - [-1, 1, C3k2, [1664, 768, 1, True]]  # 31: Reduced output channels from 1024 to 768
 
   # Detection
-  - [[25, 28, 31], 1, RTDETRDecoder, [nc, [192, 384, 768]]]  # 32: Reduced input channels from [256, 512, 1024] to [192, 384, 768]
+  - [[25, 28, 31], 1, RTDETRDecoder, [nc, [192,
