--- a/ultralytics/cfg/models/v8/dual_conv_ema_fpn_rtdetr.yaml
+++ b/ultralytics/cfg/models/v8/dual_conv_ema_fpn_rtdetr.yaml
@@ -77,7 +77,7 @@ backbone:
   - [-1, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]] # 10 (multiscale 2)
   - [6, 1, Index, [768, 9]] # 11
   - [-1, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]] # 12 (multiscale 3)
-  - [-1, 1, SPPELAN, [768, 384 3]]  # 13: Add SPPF for Swin Transformer (768 channels, kernel size 5)
+  - [-1, 1, SPPELAN, [768, 384, 3]]  # 13: Add SPPF for Swin Transformer (768 channels, kernel size 5)
 
   # Concat features along channel dimension
   - [[2, 8], 1, Concat, [1]] # 14 concat scale 1 (192 + 192 = 384 channels)
