--- a/ultralytics/cfg/models/v8/dual_conv_ema_fpn_rtdetr.yaml
+++ b/ultralytics/cfg/models/v8/dual_conv_ema_fpn_rtdetr.yaml
@@ -62,14 +62,14 @@ backbone:
   - [-1, 1, nn.Identity, []] # 0
 
   # CNN (ConvNeXt Tiny)
-  - [0, 1, TorchVision, [768, "convnext_tiny", "DEFAULT", True, 2, True, False]]  # 1
+  - [0, 1, TorchVision, [768, "convnext_tiny", "DEFAULT", True, 2, True]]  # 1
   - [-1, 1, Index, [192, 4]]  # extracts 4th output (1, 192, 80, 80) - 2
   - [1, 1, Index, [384, 6]]  # extracts 6th output (1, 384, 40, 40) - 3
   - [1, 1, Index, [768, 8]]  # extracts 8th output (1, 768, 20, 20) - 4
   # - [-1, 1, SPPF, [768, 3]]  # 5: Add SPPF for ConvNeXt (768 channels, kernel size 5)
 
   # Swin Transformer
-  - [0, 1, TorchVision, [768, swin_v2_t, DEFAULT, True, 4, True, True]] # 6 5
+  - [0, 1, TorchVision, [768, swin_v2_t, DEFAULT, True, 4, True]] # 6 5
   - [-1, 1, Index, [192, 4]] # 7 6
   - [-1, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]] # 8 (multiscale 1) 7
   - [6, 1, Index, [384, 6]] # 9 8
