--- a/ultralytics/cfg/models/v8/dual_conv_ema_fpn_rtdetr.yaml
+++ b/ultralytics/cfg/models/v8/dual_conv_ema_fpn_rtdetr.yaml
@@ -69,7 +69,7 @@ backbone:
   # - [-1, 1, SPPF, [768, 3]]  # 5: Add SPPF for ConvNeXt (768 channels, kernel size 5)
 
   # Swin Transformer
-  - [0, 1, TorchVision, [768, swin_v2_t, DEFAULT, True, 4, True]] # 6 5
+  - [0, 1, TorchVision, [768, swin_t, DEFAULT, True, 4, True]] # 6 5
   - [-1, 1, Index, [192, 4]] # 7 6
   - [-1, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]] # 8 (multiscale 1) 7
   - [5, 1, Index, [384, 6]] # 9 8
