--- a/ultralytics/cfg/models/v8/final_attn_end_rtdetr.yaml
+++ b/ultralytics/cfg/models/v8/final_attn_end_rtdetr.yaml
@@ -89,20 +89,20 @@ head:
   # Top-Down Pathway
   - [16, 1, nn.Upsample, [None, 2, "nearest"]] # 17 upsample EMA3 output to match H and W with EMA2
   - [[-1, 3, 11], 1, BiFPN_Concat3, [1]] # 18 concat EMA3 + EMA2 (1536 + 768 = 2304 channels)
-  - [-1, 1, C3k2, [512, False]] # 19 reduce channels to 512
+  - [-1, 1, C2f, [512]] # 19 reduce channels to 512
 
   - [19, 1, nn.Upsample, [None, 2, "nearest"]] # 20 upsample to match H and W with EMA1
   - [[-1, 2, 9], 1, BiFPN_Concat3, [1]] # 21 concat with EMA1 (512 + 384 = 896 channels)
-  - [-1, 1, C3k2, [256, False]] # 22 reduce channels to 256
+  - [-1, 1, C2f, [256]] # 22 reduce channels to 256
 
   # Bottom-Up Pathway
   - [22, 1, DWConv, [256, 3, 2]]    # 23: Downsample
   - [[-1, 19], 1, BiFPN_Concat2, [1]]    # 24: BiFPN Concatenate (256 + 512 = 768 channels)
-  - [-1, 1, C3k2, [512, True]]     # 25: C2f (reduce to 512 channels)
+  - [-1, 1, C2f, [512]]     # 25: C2f (reduce to 512 channels)
 
   - [25, 1, DWConv, [512, 3, 2]]    # 26: Downsample
   - [[-1, 16], 1, BiFPN_Concat2, [1]]    # 27: Concatenate with EMA3 (512 + 1536 = 2048 channels)
-  - [-1, 1, C3k2, [1024, True]]    # 28: C2f (reduce to 1024 channels)
+  - [-1, 1, C2f, [1024]]    # 28: C2f (reduce to 1024 channels)
 
   # Detection
   - [[22, 25, 28], 1, RTDETRDecoder, [nc]]  # 29: Detect(P3, P4, P5)
