--- a/ultralytics/cfg/models/v8/final_attn_end_rtdetr.yaml
+++ b/ultralytics/cfg/models/v8/final_attn_end_rtdetr.yaml
@@ -111,16 +111,16 @@ head:
   # Top-Down Pathway
   - [16, 1, nn.Upsample, [None, 2, "nearest"]] # 17 upsample EMA3 output to match H and W with EMA2
   - [[-1, 3, 11], 1, BiFPN_Concat3, [1]] # 18 concat EMA3 + EMA2 (1536 + 384 = 1920 channels)
-  - [-1, 1, GhostBottleneck, [1920, 384, 3, 1]] # 19 reduce channels to 384 (critical layer, lightweight)
+  - [-1, 1, GhostBottleneck, [384, 3, 1]] # 19 reduce channels to 384 (critical layer, lightweight)
   - [19, 1, nn.Upsample, [None, 2, "nearest"]] # 20 upsample to match H and W with EMA1
-  - [[-1, 2, 9], 1, BiFPN_Concat3, [1]] # 21 concat with EMA1 (384 + 192 = 576 channels)
-  - [-1, 1, GhostConv, [576, 192, 3, 1, 1, True]] # 22 reduce channels to 192 (less critical, lightweight)
+  - [[-1, 2, 9], 1, BiFPN_Concat2, [1]] # 21 concat with EMA1 (384 + 192 = 576 channels)
+  - [-1, 1, GhostConv, [192, 3, 1, 1, True]] # 22 reduce channels to 192 (less critical, lightweight)
   # Bottom-Up Pathway
-  - [22, 1, AConv, [192, 192]] # 23: Downsample (lightweight)
-  - [[-1, 19], 1, BiFPN_Concat2, [1]] # 24: BiFPN Concatenate (192 + 384 = 576 channels)
-  - [-1, 1, GhostConv, [576, 384, 3, 1, 1, True]] # 25: Reduce channels to 384 (less critical, lightweight)
-  - [25, 1, AConv, [384, 384]] # 26: Downsample (lightweight)
+  - [22, 1, AConv, [192]] # 23: Downsample (lightweight)
+  - [[-1, 19], 1, BiFPN_Concat3, [1]] # 24: BiFPN Concatenate (192 + 384 = 576 channels)
+  - [-1, 1, GhostConv, [384, 3, 1, 1, True]] # 25: Reduce channels to 384 (less critical, lightweight)
+  - [25, 1, AConv, [384]] # 26: Downsample (lightweight)
   - [[-1, 16], 1, BiFPN_Concat2, [1]] # 27: Concatenate with EMA3 (384 + 1536 = 1920 channels)
-  - [-1, 1, GhostBottleneck, [1920, 768, 3, 1]] # 28: Reduce channels to 768 (critical layer, lightweight)
+  - [-1, 1, GhostBottleneck, [768, 3, 1]] # 28: Reduce channels to 768 (critical layer, lightweight)
   # Detection
   - [[22, 25, 28], 1, RTDETRDecoder, [nc]] # 29: Detect(P3, P4, P5)
