--- a/ultralytics/cfg/models/v8/yolov8.yaml
+++ b/ultralytics/cfg/models/v8/yolov8.yaml
@@ -40,10 +40,10 @@ head:
 
   - [-1, 1, DepthwiseConvBlock, [256, 3, 2]]
   - [[-1, 12], 1, Concat, [1]] # cat head P4
-  - [-1, 3, C3k2, [512]] # 18 (P4/16-medium)
+  - [-1, 3, C3k2, [512, True]] # 18 (P4/16-medium)
 
   - [-1, 1, DepthwiseConvBlock, [512, 3, 2]]
   - [[-1, 9], 1, Concat, [1]] # cat head P5
-  - [-1, 3, C3k2, [1024]] # 21 (P5/32-large)
+  - [-1, 3, C3k2, [1024, True]] # 21 (P5/32-large)
 
   - [[15, 18, 21], 1, Detect, [nc]] # Detect(P3, P4, P5)
