--- a/ultralytics/cfg/models/v8/test1.yaml
+++ b/ultralytics/cfg/models/v8/test1.yaml
@@ -35,7 +35,7 @@ backbone:
   - [-1, 1, DepthwiseConvBlock, [256, 3, 1]] # 22 (1, 256, 20, 20)
 
 head:
-  - [[16, 19, 22], 1, Detect, [nc]]  # Pass P3, P4, P5 to Detect head (index 32) 30
+  - [[16, 19, 22], 1, RTDETRDecoder, [nc]]  # Pass P3, P4, P5 to Detect head (index 32) 30
   
 
 # head:
