--- a/ultralytics/cfg/models/v8/test1_rtdetr.yaml
+++ b/ultralytics/cfg/models/v8/test1_rtdetr.yaml
@@ -33,19 +33,19 @@ backbone:
   - [-1, 1, DepthwiseConvBlock, [256, 3, 1]] # 20 (1, 256, 20, 20) A
 
 head:
-  - [-1, nn.Upsample, [None, 2, "nearest"]] #21
+  - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #21
   - [[17, -1], 1, BiFPN_Concat2, [1]] #22 AB
   - [-1, 1, DepthwiseConvBlock, [256, 3, 1]] #23
 
-  - [-1, nn.Upsample, [None, 2, "nearest"]] #24
+  - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #24
   - [[14, -1], 1, BiFPN_Concat2, [1]] #25 ABC
   - [-1, 1, DepthwiseConvBlock, [256, 3, 1]] #26
 
-  - [-1, DWConv, [256, 3, 2]] #27
+  - [-1, 1, DWConv, [256, 3, 2]] #27
   - [[26, 22, 17],1, BiFPN_Concat3, [1]] #28 ABC + AB + B
   - [-1, 1, DepthwiseConvBlock, [256, 3, 1]] #29
 
-  - [-1, DWConv, [256, 3, 2]] #30
+  - [-1, 1, DWConv, [256, 3, 2]] #30
   - [[28, 20], 1, BiFPN_Concat2, [1]] #31 ABC + AB + B + A
   - [-1, 1, DepthwiseConvBlock, [256, 3, 1]] #32
 
