--- a/ultralytics/cfg/models/v8/test3.yaml
+++ b/ultralytics/cfg/models/v8/test3.yaml
@@ -16,4 +16,4 @@ backbone:
   - [-1, 1, DWConv, [1024, 3, 2]] #10  (1024, 5, 5)
   - [-1, 2, DWC3k2, [1024, True]] #11
 head:
-  - [[11, 8, 7, 5, 3], 1, Detect, [nc]]
+  - [[11, 7, 5], 1, Detect, [nc]]
