--- a/ultralytics/cfg/models/v8/test5.yaml
+++ b/ultralytics/cfg/models/v8/test5.yaml
@@ -28,17 +28,17 @@ backbone:
   - [-1, 1, EMA, [1024]] #(1, 1024, 20, 20) 18 multiscale 3
 
   # #Concat
-  - [3, 1, DWConv, [128, 1, 1]] #9 (1, 192, 80, 80) -> (1, 128, 80, 80)
-  - [13, 1, DWConv, [128, 1, 1]] #10 (1, 256, 80, 80) -> (1, 128, 80, 80)
-  - [[9, 10], 1, Concat, [1]] # 11 (1, 256, 80, 80)
+  # - [3, 1, DWConv, [128, 1, 1]] #9 (1, 192, 80, 80) -> (1, 128, 80, 80)
+  # - [13, 1, DWConv, [128, 1, 1]] #10 (1, 256, 80, 80) -> (1, 128, 80, 80)
+  - [[3, 13], 1, Concat, [1]] # 11 (1, 256, 80, 80)
 
-  - [5, 1, DWConv, [128, 1, 1]] #12 (1, 384, 40, 40) -> (1, 128, 40, 40)
-  - [15, 1, DWConv, [128, 1, 1]] #13 (1, 512, 40, 40) -> (1, 128, 40, 40)
+  # - [5, 1, DWConv, [128, 1, 1]] #12 (1, 384, 40, 40) -> (1, 128, 40, 40)
+  # - [15, 1, DWConv, [128, 1, 1]] #13 (1, 512, 40, 40) -> (1, 128, 40, 40)
   - [[5, 15], 1, Concat, [1]] # 14 (1, 256, 40, 40)
 
-  - [8, 1, DWConv, [256, 1, 1]] #15 (1, 768, 20, 20) -> (1, 256, 20, 20)
-  - [18, 1, DWConv, [256, 1, 1]] #16 (1, 1024, 20, 20) -> (1, 256, 20, 20)
-  - [[15, 16], 1, Concat, [1]] #15 (1, 512, 20, 20)
+  # - [8, 1, DWConv, [256, 1, 1]] #15 (1, 768, 20, 20) -> (1, 256, 20, 20)
+  # - [18, 1, DWConv, [256, 1, 1]] #16 (1, 1024, 20, 20) -> (1, 256, 20, 20)
+  - [[8, 18], 1, Concat, [1]] #15 (1, 512, 20, 20)
 
 # YOLOv8.0n head
 head:
